# IAgent

./: .env  .env.example  .gitignore  .python-version  Makefile  README.md  docker-compose.yml  shcema.sql  test.json
api-gateway/: .env.example  Dockerfile  README.md  main.py  requirements.txt
api-gateway/app/: __init__.py
docs/: db--state.md  work-guidelines.md
frontend/: README.md  index-simli.html  index-working.html  index.bck.html  index.html  interview.html  outro.html  pubspec.yaml  script.js  styles.css  supabase-tester.html
frontend/lib/: main.dart
frontend/linux/: CMakeLists.txt
frontend/test/: widget_test.dart
migrations/: 001_create_interview_conversations_table.sql  001_create_interview_recordings_table.sql  002_create_interview_transcripts_table.sql  003_create_interview_segments_table.sql  004_create_interview_analytics_table.sql  005_create_rol_user_table.sql  006_create_users_table.sql  007_create_jobs_table.sql  008_create_candidates_table.sql  009_create_interviews_table.sql  010_create_general_questions_answers_table.sql  011_create_technical_questions_answers_table.sql  012_create_technical_questions_answers_jobs_table.sql  013_update_prompts_structure.sql  014_add_simli_default_prompt.sql  README.md
services/: TEST_DEBUG_REPORT.md
services/core/: main.py  (+4 more)
shared/: README.md  pyproject.toml
test_data/: Jobs-and-questions_synth.json  evaluator_sample_call.py  interview_server.py  interviewer-prompt.json  interviewer-prompt.md  interviewer_prompt.md  mock_data.json  qualified-candidates_synth.json  unqualified-candidates_synth.json
(+237 files in other folders)
