[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "org_shared"
version = "0.1.0"
description = "Shared utilities for AI Interview Platform"
requires-python = ">=3.9"
dependencies = [
    "python-jose[cryptography]==3.3.0",
    "redis==5.0.1",
    "psycopg2-binary==2.9.9",
    "sqlalchemy==2.0.23",
    "pymongo==4.6.0",
    "ddtrace==2.3.0",
    "opentelemetry-api==1.21.0",
    "opentelemetry-sdk==1.21.0",
    "opentelemetry-instrumentation==0.42b0",
    "pydantic==2.5.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.1",
    "flake8>=6.1.0"
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_optional = true